--- a/Bookers/app/views/layouts/application.html.erb
+++ b/Bookers/app/views/layouts/application.html.erb
@@ -20,14 +20,16 @@
         <% end %>
       </div>
       <div class="row">
-        <% if user_signed_in? %>
-        <%= form_tag search_path, method: :get do %>
-          <%= text_field_tag :search %>
-          <%= select_tag(:option, options_for_select([["ユーザー","user"],["投稿","book"]])) %>
-          <%= select_tag(:way, ways_for_select([["完全一致","perfect"],["前方一致","front"],["後方一致","behind"],["部分一致","part"]])) %>
-          <%= submit_tag "検索" %>
-        <% end %>
-        <% end %>
+        <div class="col-xs-5 col-xs-offset-4">
+          <% if user_signed_in? %>
+          <%= form_tag search_path, method: :get do %>
+            <%= text_field_tag :search %>
+            <%= select_tag(:option, options_for_select([["ユーザー","user"],["投稿","book"]])) %>
+            <%= select_tag(:way, options_for_select([["完全一致","perfect"],["前方一致","front"],["後方一致","behind"],["部分一致","part"]])) %>
+            <%= submit_tag "検索" %>
+          <% end %>
+          <% end %>
+        </div>
       </div>
       <div class="row">
         <%= yield %>
