--- a/Bookers/app/views/search/search.html.erb
+++ b/Bookers/app/views/search/search.html.erb
@@ -1,7 +1,7 @@
-<% if @user_or_book == "1" %>
-	<h2>Users search for</h2>
+<% if @options == "user" %>
+	<h2>Users search for'<%= "#{@search}" %>'</h2>
 	<%= render '/users/index', users: @users %>
 <% else %>
-	<h2>Books search for</h2>
+	<h2>Books search for'<%= "#{@search}" %>'</h2>
 	<%= render '/books/index', books: @books %>
 <% end %>
